Add BINL defines and docs about BINL

--- a/Netboot.Service.BINL/Netboot.Service.BINL.csproj
+++ b/Netboot.Service.BINL/Netboot.Service.BINL.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<Compile Include="BINLService.cs" />
+		<Compile Include="Netboot\Network\Definitions\Definitions.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
