--- a/Netboot.Service.BINL/Netboot.Service.BINL.csproj
+++ b/Netboot.Service.BINL/Netboot.Service.BINL.csproj
@@ -21,4 +21,8 @@
 		</ProjectReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Netboot\Network\Packet\" />
+	</ItemGroup>
+
 </Project>
