--- a/Netboot.Service.TFTP/Netboot.Service.TFTP.csproj
+++ b/Netboot.Service.TFTP/Netboot.Service.TFTP.csproj
@@ -10,6 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Include="Netboot\Network\Client\TFTPClient.cs" />
+	  <Compile Include="Netboot\Network\Definitions.cs" />
+	  <Compile Include="Netboot\Network\Packet\TFTPPacket.cs" />
 	  <Compile Include="Netboot\Services\TFTPService.cs" />
 	</ItemGroup>
 
