--- a/Netboot.Service.DHCP/Netboot.Service.DHCP.csproj
+++ b/Netboot.Service.DHCP/Netboot.Service.DHCP.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <Compile Include="Netboot\Network\Client\DHCPClient.cs" />
+    <Compile Include="Netboot\Network\Client\RBCP\BootMenueEntry.cs" />
+    <Compile Include="Netboot\Network\Client\RBCP\Functions.cs" />
     <Compile Include="Netboot\Network\Definitions\Definitions.cs" />
     <Compile Include="Netboot\Network\Definitions\DHCPOption.cs" />
     <Compile Include="Netboot\Network\Packet\DHCPPacket.cs" />
