--- a/NetBootd.Common/NetBoot.Common.csproj
+++ b/NetBootd.Common/NetBoot.Common.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="SharpZipLib" Version="1.4.2" />
+    <PackageReference Include="YamlDotNet" Version="15.1.1" />
   </ItemGroup>
 
   <ItemGroup>
