Make some options configureable

--- a/Netbootd/Config/nt5.yaml
+++ b/Netbootd/Config/nt5.yaml
@@ -2,9 +2,9 @@ name: Windows NT/2Kx/XP/2003 CD
 tag: nt5
 sourceDiskFiles:
   ris:
-    OSCHOICE.EXE: /OSChooser/NTLDR
-    STARTROM.N12: /OSChooser/Startrom.n12
-    STARTROM.COM: /OSChooser/Startrom.com
+    OSCHOICE.EXE: /OSChooser/i386/NTLDR
+    STARTROM.N12: /OSChooser/i386/Startrom.n12
+    STARTROM.COM: /OSChooser/i386/Startrom.com
     WELCOME.OSC: /OSChooser/Welcome.osc
   arch:
     x86: i386
