--- a/Netbootd/Netboot.csproj
+++ b/Netbootd/Netboot.csproj
@@ -18,6 +18,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="TFTPRoot\Boot\x86\default.bcd.LOG" />
+    <None Remove="TFTPRoot\Boot\x86\default.bcd.LOG1" />
+    <None Remove="TFTPRoot\Boot\x86\default.bcd.LOG2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="TFTPRoot\Boot\x86\Fonts\wgl4_boot.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NetBootd.Common\Netboot.Common.csproj" />
   </ItemGroup>
 
@@ -61,10 +73,29 @@
     <None Include="Dumps\CHL_NTLMSSP.bin" />
     <None Include="Dumps\dupp.pcap" />
     <None Include="Dumps\NEG_NTLMSSP.bin" />
+    <None Include="TFTPRoot\Boot\x64\boot.wim">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TFTPRoot\Boot\x64\bootmgr.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TFTPRoot\Boot\x64\default.bcd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TFTPRoot\Boot\x64\pxeboot.n12">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TFTPRoot\Boot\x64\wdsnbp.com">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TFTPRoot\Boot\x86\boot.sdi">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="TFTPRoot\Boot\x86\default" />
     <None Include="TFTPRoot\Boot\x86\dosundi.1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="TFTPRoot\Boot\x86\Fonts\wgl4_boot.ttf" />
     <None Include="TFTPRoot\OSChooser\english\00004e22.osc" />
     <None Include="TFTPRoot\OSChooser\english\00004e23.osc" />
     <None Include="TFTPRoot\OSChooser\english\00004e24.osc" />
