--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,6 @@ FodyWeavers.xsd
 *.n12
 *.com
 *.bin
+/Netbootd/TFTPRoot/Boot/x86/wdsnbp.com
+/Netbootd/TFTPRoot/Boot/x86/pxelinux.0
+/Netbootd/TFTPRoot/Boot/x86/dosundi.1
