--- a/Netboot.Service.DHCP/Netboot.Service.DHCP.csproj
+++ b/Netboot.Service.DHCP/Netboot.Service.DHCP.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <ProjectReference Include="..\NetBootd.Common\Netboot.Common.csproj">
+	  <ProjectReference Include="..\NetBootd.Common\NetBoot.Common.csproj">
 		  <Private>false</Private>
 		  <ExcludeAssets>runtime</ExcludeAssets>
 	  </ProjectReference>
