--- a/Netboot.Service.TFTP/Netboot.Service.TFTP.csproj
+++ b/Netboot.Service.TFTP/Netboot.Service.TFTP.csproj
@@ -19,7 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\NetBootd.Common\Netboot.Common.csproj" />
+	  <ProjectReference Include="..\NetBootd.Common\NetBoot.Common.csproj" />
 	</ItemGroup>
 
 </Project>
