--- a/Netboot.Utility/Netboot.Utility.csproj
+++ b/Netboot.Utility/Netboot.Utility.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NetBootd.Common\Netboot.Common.csproj" />
+    <ProjectReference Include="..\NetBootd.Common\NetBoot.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
