ignore DS store

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,4 @@ FodyWeavers.xsd
 /Netbootd/TFTPRoot/Boot/x86/pxelinux.0
 /Netbootd/TFTPRoot/Boot/x86/dosundi.1
 /Netbootd/TFTPRoot/Boot/x86/boot.sdi
+.DS_Store
